@@ -35,6 +35,9 @@ New in spot 2.11.5.dev  (not yet released)
     where thousands of different filenames can be created failed with
     "Too many open files".  (Issue #534)
 
+  - Using --format=... on a tool that output formulas would force
+    the output on standard output, even when --output was given.
+
 
 New in spot 2.11.5  (2023-04-20)
 
